--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="content-left-header-bottom">
                     <img src="img/header.png" alt="">
-                    <div class="">
+                    <div class="fixed-box-delivery">
                         <span>
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -128,7 +128,7 @@
                             </svg>
                             Delivery
                         </span>
-                        <span> 30 mins</span>
+                         30 mins
                     </div>
                 </div>
             </div>
